# glpaper

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.md  README.md  TODO.md  glpaper.toml  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
src/: config.cpp  config.hpp  getwindow.cpp  getwindow.hpp  main.cpp  scaling.cpp  scaling.hpp
test/: CMakeLists.txt
test/src/: glpaper_test.cpp
